# Protean

./: Cargo.toml  README.md  watcher.sh
protean/: Cargo.toml
protean/src/: error.rs  lib.rs  patch.rs  stats.rs  traits.rs  version.rs
protean/src/impls/: json.rs  list.rs  mod.rs  object.rs  primitives.rs
protean_derive/: Cargo.toml
protean_examples/diesel_updates/: .env  Cargo.toml  README.md  diesel.toml
protean_examples/diesel_updates/docker/: fhl.docker-compose.yml
protean_examples/diesel_updates/migrations/2020-07-30-165209_create_fhl/: down.sql  up.sql
protean_examples/diesel_updates/src/: main.rs  pg_schema.rs
replicant/: Cargo.toml
replicant/src/: error.rs  lib.rs
strain/: Cargo.toml
strain/src/: error.rs  lib.rs
strain_derive/: Cargo.toml
test_suite/: Cargo.toml  build.rs
test_suite/tests/: tdd.rs  test_all.rs
test_suite/tests/common/: mod.rs  test_all.rs
