[package]
name = "protean"
version = "0.1.0"
authors = ["Dave Fogelson <dfogelson@theprocessfoundry.com>"]
edition = "2018"
description = "A derive to enable viewing the mutation history of a struct"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "struct", "diff", "history"]

[features]
default = ["protean_derive"]

[dependencies]
# General logging
log = "0.4.11"
env_logger = "0.7.1"

# Error creation/handling
anyhow = "1.0.32"
thiserror = "1.0.20"

# Serialization
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"

# Derivations
protean_derive = { path = "../protean_derive", optional = true }

