[package]
authors = ["Dave Fogelson <dfogelson@theprocessfoundry.com>"]
categories = ["development-tools::procedural-macro-helpers"]
description = "A derive to enable viewing the mutation history of a struct"
edition = "2018"
keywords = ["macro", "struct", "diff", "history"]
name = "protean"
version = "0.1.0"

[features]
default = ["protean_derive"]

[dependencies]
# General logging
env_logger = "0.9.0"
log = "0.4.14"

# Error creation/handling
thiserror = "1.0.30"

# Serialization
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"

# Derivations
protean_derive = {path = "../protean_derive", optional = true}

# String Guid generaters
uuid = {version = "0.8.2", features = ["v4", "v3", "serde"]}
