[package]
name = "protean_derive"
version = "0.1.0"
authors = ["Dave Fogelson <dfogelson@theprocessfoundry.com>"]
edition = "2018"
description = "A derive to enable viewing the mutation history of a struct"


[lib]
name = "protean_derive"
proc-macro = true



[dependencies]
# General logging
log = "0.4.14"
env_logger = "0.9.0"

# Error creation
anyhow = "1.0.51"
thiserror = "1.0.30"

proc-macro2 = "1.0.33"
syn = { version = "1.0.82", features = ["extra-traits"] }
quote = "1.0.10"


[dev-dependencies]
syn = { version = "1.0.82", features = ["extra-traits"] }
