[package]
name = "test_suite"
version = "0.0.0"
authors = ["Dave Fogelson <dfogelson@theprocessfoundry.com>"]
edition = "2018"
description = "Testing for Protean"
publish = false
build = "build.rs"

[dependencies]
protean = { path = "../protean" }
tyrell = { path = "../tyrell" }

# General logging
log = "0.4.11"
env_logger = "0.7.1"

# Error creation/handling
anyhow = "1.0.32"
thiserror = "1.0.20"

# Serialization
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"

# String Guid generaters
uuid = { version = "0.8.1", features = ["v4", "serde"] }


[build-dependencies]
toolchain_find = "0.1.4"

[dev-dependencies]
rand = "0.7.3"
# fnv = "1.0"
# macrotest = "=1.0.0"
rustversion = "1.0.3"
# serde = { path = "../serde", features = ["rc", "derive"] }
# serde_derive = { path = "../serde_derive", features = ["deserialize_in_place"] }
# serde_test = { path = "../serde_test" }
# trybuild = "1.0"