[package]
authors = ["Dave Fogelson <dfogelson@theprocessfoundry.com>"]
build = "build.rs"
description = "Testing for Protean"
edition = "2018"
name = "test_suite"
publish = false
version = "0.0.0"

[dependencies]
protean = {path = "../protean"}
# tyrell = {path = "../tyrell"}

# General logging
env_logger = "0.9.0"
log = "0.4.14"

# Error creation/handling
thiserror = "1.0.30"

# Serialization
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"

# String Guid generaters
uuid = {version = "0.8.2", features = ["v4", "serde"]}

[build-dependencies]
toolchain_find = "0.2.0"

[dev-dependencies]
rand = "0.8.4"
# fnv = "1.0"
# macrotest = "=1.0.0"
rustversion = "1.0.6"
# serde = { path = "../serde", features = ["rc", "derive"] }
# serde_derive = { path = "../serde_derive", features = ["deserialize_in_place"] }
# serde_test = { path = "../serde_test" }
# trybuild = "1.0"
