[package]
name = "diesel_updates"
version = "0.1.0"
authors = ["Dave Fogelson <dfogelson@theprocessfoundry.com>"]
edition = "2018"
description = "An example using protean with diesel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General logging
log = "0.4.11"
env_logger = "0.7.1"

# Error creation
anyhow = "1.0.32"
thiserror = "1.0.20"

# Database ORM
diesel = { version = "1.4.4", features = ["postgres"] }

# Store values in the local environment
dotenv = "0.15.0"